tests/errors/multiple-attr-vals.expect
---CODE---
1
---STDERR---
Error: Calyx Parser:  --> 4:5
  |
4 |     @external(1) @external(2) r = std_reg(32);âŠ
  |     ^-----------------------^
  |
  = Malformed Structure: Multiple entries for attribute: external
